<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/actv_register_genre_tv_title"
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_gravity="center"
        
        android:layout_marginTop="5dp"
		android:layout_marginBottom="10dp"
		android:layout_marginLeft="5dp"
		android:layout_marginRight="5dp"
        
        android:gravity="center"
        
        
        android:text="@string/actv_register_genre_tv_title" 
        android:textSize="25dp"
        
        />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            
            android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:layout_marginLeft="5dp"
			android:layout_marginRight="5dp"
            
            >

            <TextView
                android:id="@+id/actv_register_genre_tv_name"
                
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                android:layout_marginTop="5dp"
				android:layout_marginBottom="5dp"
				android:layout_marginLeft="5dp"
				android:layout_marginRight="5dp"
                
                
                android:text="@string/actv_register_activity_tv_name" 
                android:textSize="25dp"
                
                />

            <EditText
                android:id="@+id/actv_register_genre_et_name"
                
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                android:layout_weight="1"
                
                android:textSize="25dp" 
                
                
                />
        </TableRow>

    </TableLayout>

    <LinearLayout
        
        style="@style/layout_wh_ww"
        
        android:layout_marginTop="20dp"
		android:layout_marginBottom="5dp"
		android:layout_marginLeft="5dp"
		android:layout_marginRight="5dp"
        
        android:layout_gravity="center"
        
        >

        <Button
            android:id="@+id/actv_register_genre_bt_register"
            
            style="@style/actv_register_activity_bt_start"
            
            android:text="@string/generic_tv_register" 
            android:textColor="@color/blue1"
            android:textSize="25dp"
            
            />

        <Button
            android:id="@+id/actv_register_genre_bt_cancel"
            
            style="@style/actv_register_activity_bt_pause"
            
            android:text="@string/generic_bt_cancel" 
            android:textColor="@color/black"
            android:textSize="25dp"
            
            />

        <Button
            android:id="@+id/actv_register_genre_bt_clear"
            
            style="@style/actv_register_activity_bt_stop"
            
            android:text="@string/generic_tv_clear" 
            android:textColor="@color/black"
            android:textSize="25dp"
            
            />

    </LinearLayout>

</LinearLayout>