<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        
        android:gravity="center"
        >

        <TextView
            android:id="@+id/dlg_confirm_delete_memo_tv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             
            android:text="@string/dlg_confirm_delete_memo_message"
            android:textSize="25dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        
        android:gravity="center"
        
        >
		
		<!-- Table name -->
        <TextView
            android:id="@+id/dlg_confirm_delete_memo_tv_memo_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             
            android:textColor="@color/yello"
            android:textSize="25dp"
            
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        
        android:gravity="center"
        >

        <Button
            android:id="@+id/dlg_confirm_delete_memo_btn_ok"
            
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            
            android:text="@string/generic_bt_ok" 
            android:textSize="25dp"
            android:textColor="@color/blue1"
            
            android:layout_marginLeft="5dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="5dp"
            
            />

        <Button
            android:id="@+id/dlg_confirm_delete_memo_btn_cancel"
            
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            
            android:text="@string/generic_bt_cancel" 
            android:textSize="25dp"
            android:textColor="@color/red"
            
            android:layout_marginLeft="2dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            
            />

    </LinearLayout>

</LinearLayout>