<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="3dp"
            
            android:orientation="horizontal" 
            >

            <TextView
                android:id="@+id/actv_show_activity_tv_activity_name"
                
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                android:layout_weight="1"
                
                android:background="@color/white"
                
                android:gravity="left"
                
                android:paddingBottom="3dp"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:paddingTop="3dp"
                
                android:textColor="@color/black"
                android:textSize="25dp" 
                
                />

            <TextView
                android:id="@+id/actv_show_activity_tv_group"
                
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                android:layout_weight="0.5"
                
                android:paddingBottom="3dp"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:paddingTop="3dp"
                
                android:textSize="25dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/actv_show_activity_tv_created_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="3dp"
                android:layout_weight="1"
                android:paddingBottom="3dp"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:paddingTop="3dp"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/actv_show_activity_tv_finished_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20dp" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        
        android:layout_width="match_parent"
        android:layout_height="350dp"
        
        android:layout_weight="1"
        
        android:layout_marginTop="5dp"
		android:layout_marginBottom="5dp"
		android:layout_marginLeft="5dp"
		android:layout_marginRight="5dp"
        
        
        
        />

    <LinearLayout
        
        style="@style/layout_wh_ww"
        
        android:layout_marginTop="5dp"
		android:layout_marginBottom="5dp"
		android:layout_marginLeft="5dp"
		android:layout_marginRight="5dp"
        
        android:layout_gravity="center"
        
        >

        <Button
            android:id="@+id/actv_show_activity_bt_1"
            
            style="@style/layout_bt_wh_ww"
            
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="3dp"
            
            
            android:text="@string/actv_show_activity_bt_1" 
            android:textColor="@color/blue1"
            android:textSize="25dp"
            
            />

        <Button
            android:id="@+id/actv_show_activity_bt_2"
            
            style="@style/layout_bt_wh_ww"


            android:layout_marginBottom="3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="3dp"
            
            android:text="@string/actv_show_activity_bt_2" 
            android:textColor="@color/black"
            android:textSize="25dp"
            
            />

        <Button
            android:id="@+id/actv_show_activity_bt_3"
            
            style="@style/layout_bt_wh_ww"

            android:layout_marginBottom="3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="3dp"
            
            android:text="@string/actv_show_activity_bt_3" 
            android:textColor="@color/black"
            android:textSize="25dp"
            
            />

    </LinearLayout>

</LinearLayout>